Changed docker to open in linux enviroment
- Hyper V did not want to cooperate

--- a/Peritus-BE/Peritus-BE.csproj
+++ b/Peritus-BE/Peritus-BE.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Peritus_BE</RootNamespace>
     <UserSecretsId>5d86dc65-e040-4518-b558-f7651e128a61</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
