--- a/Peritus-BE/appsettings.json
+++ b/Peritus-BE/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=db;Database=master;User=sa;Password=aSamplePassword2Change4RealWorldUsage!;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
