--- a/Peritus-BE/appsettings.json
+++ b/Peritus-BE/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=db;Database=master;User=sa;Password=aSamplePassword2Change4RealWorldUsage!;"
+    "Default": "Server=localhost;Database=master;User=sa;Password=aSamplePassword123!"
   },
   "Logging": {
     "LogLevel": {
